# mkdocs-eds

./: .pre-commit-config.yaml  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: documentation.yml  tests.yml
demo_package/: __init__.py  math.py
docs/: index.md
docs/extensions/: auto-gen-pages.md  cards.md  citations.md  clickable-code.md  pret-snippets.md
main/: 404.html  index.html  objects.inv  references.bib
main/assets/: bundle.00dd5c1cd640b244592a.pkl  bundle.34c008b5838d88a966b0.pkl  bundle.3aa002370be46660715d.pkl  bundle.6ce0396e8cb97ff7c795.pkl  bundle.984c95d0697c512be09f.pkl  bundle.99b107b78eae55f9cd53.pkl  bundle.9eb09542aa85b1e906a3.pkl  bundle.a777376299ee9a0e5976.pkl  bundle.cf3aca181e7944170d44.pkl  bundle.e5aee4d90976c2f42993.pkl
main/assets/stylesheets/: extra.css
main/extensions/auto-gen-pages/: index.html
main/extensions/cards/: index.html
main/extensions/citations/: index.html
main/extensions/clickable-code/: index.html
main/extensions/pret-snippets/: index.html
main/reference/demo_package/: index.html
main/reference/demo_package/math/: index.html
main/search/: search_index.json
mkdocs_eds/: __init__.py  auto_gen_pages.py  cards.py  clickable_code.py  clickable_snippets.py  fix_fonts.py  link_sources.py  mkdocstrings_options_templates.py  notebooks_to_md.py  pret_snippet_renderer.py
mkdocs_eds/assets/stylesheets/: extra.css
mkdocs_eds/assets/templates/python/material/docstring/: admonition.html
